# rutracker_trends

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
scripts/: main.py
utils/: rutracker.py
